2008-06-21  Markus Steinborn <msteinbo@uni-paderborn.de>

	* configure.ac, src/versionp.h: Bump version to 3.6.4.91.

2008-06-18  Markus Steinborn <msteinbo@uni-paderborn.de>

	* doc/gv.texi: Update manual

	* src/gv_message.h: Update usage message
	
	* src/main_globals: Add fullscreen_p, presentation_p and ascale_p
	
	* src/main.c: Add parsing of --fullscreen and of --scale with a float and
	--presentation
	
	* src/options_gv.c: Include math.h

2008-06-17  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/callbacks.c (cb_setPagemedia): If autoresize is off and any
	special scale is used, then recalculate the scale.
	
	* src/misc.c (show_page): If autoresize is off and any
	special scale is used, display of new page is required and orientation
	or Pagemedia differs, then recalculate the scale.

2008-06-15  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/main_globals.h: New globat variable gv_ascale with the arbitraty
	scale
	
	* src/gv_user_res.dat: In gv options, enable input of arbitrary scale
	
	* src/main.c: Initialize gv_ascale
	
	* src/scale.c (scale_parseScales): Adjust parser for arbitrary scale
	 (symbolic scale factor is -2)
	 
	* src/misc.c (set_new_scale): Handle arbitrary scale
	
	* src/options_gv.c: Handle editing of arbitrary scale
	
	* src/callbacks.c(cb_setOrientation): If autoresize is off and any
	special scale is used, then recalculate the scale.

2008-06-14  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/action.c(action_shellConfigureNotify): If autoresize is turned
	off and actual scale is "Fit to window" then rescale.
	
	* src/gv_user_res.dat: New scale "Fit to window"
	
	* src/misc.c (set_new_scale): Handle "Fit to window"-scale
	
	* src/scale.c (scale_parseScales): Adjust parser to handle new
	"Fit to window"-scale (symbolic scale factor is 0.000).
	
	* src/action.c, src/gv_user_res.dat, src/misc.c, src/scale.c:
	some as above for "Fit width to window"-scale
	(symbolic scale factor is -1.000).
